     compression parents are sent before any delta hunks that depend 
     on them.
     (Martin Pool, #164637)

   * A progress bar has been added for knitpack -> knitpack fetching.
     (Robert Collins, #157789)

   * ``commit`` is now able to invoke an external editor in a non-ascii
     directory. (Daniel Watkins, #84043)

   * Catch connection errors for ftp.
     (Vincent Ladeuil, #164567)

   * Conflicts are now resolved recursively by ``revert``.
     (Aaron Bentley, #102739)

   * Detect invalid transport reuse attempts by catching invalid URLs.
     (Vincent Ladeuil, #161819)

   * Do no use timeout in HttpServer anymore.
     (Vincent Ladeuil, #158972).

   * Don't catch the exceptions related to the http pipeline status before
     retrying an http request or some programming errors may be masked.
     (Vincent Ladeuil, #160012)

   * Fix exception when revisionspec contains merge revisons but log
     formatter doesn't support merge revisions. (Kent Gibson, #148908)

   * Fix exception when ScopeReplacer is assigned to before any members have
     been retrieved.  (Aaron Bentley)

   * Fix multiple connections during checkout --lightweight.
     (Vincent Ladeuil, #159150)

   * Fix typo in limiting offsets coalescing for http, leading to
     whole files being downloaded instead of parts.
     (Vincent Ladeuil, #165061)

   * FTP server errors don't error in the error handling code.
     (Robert Collins, #161240)

   * It is clearer when a plugin cannot be loaded because of its name, and a
     suggestion for an acceptable name is given. (Daniel Watkins, #103023)

   * Leave port as None in transport objects if user doesn't
     specify a port in urls.
     (vincent Ladeuil, #150860)

   * Make sure Repository.fetch(self) is properly a no-op for all
     Repository implementations. (John Arbash Meinel, #158333)

   * Mark .bzr directories as "hidden" on Windows.
     (Alexander Belchenko, #71147)
